--- a/cdron_video_analysis/cdron_video_analysis.vcxproj
+++ b/cdron_video_analysis/cdron_video_analysis.vcxproj
@@ -53,6 +53,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 11.8.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
@@ -70,13 +71,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(C_INCLUDE)\opencv\include;$(C_INCLUDE)\libtorch\include;$(C_INCLUDE)\libtorch\include\torch\csrc\api\include;$(C_INCLUDE)\MNN\include;C:\Program Files\NVIDIA Corporation\NvToolsExt\\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\include;C:\Program Files\NVIDIA Corporation\NvToolsExt\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(C_INCLUDE)\json\include;$(C_INCLUDE)\libhv\include;$(C_INCLUDE)\opencv\include;$(C_INCLUDE)\libtorch\include;$(C_INCLUDE)\libtorch\include\torch\csrc\api\include;$(C_INCLUDE)\MNN\include;C:\Program Files\NVIDIA Corporation\NvToolsExt\\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\include;C:\Program Files\NVIDIA Corporation\NvToolsExt\include;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)..\vsout\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(C_INCLUDE)\opencv\include;$(C_INCLUDE)\MNN\include;C:\Program Files\NVIDIA Corporation\NvToolsExt\\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\include;C:\Program Files\NVIDIA Corporation\NvToolsExt\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(C_INCLUDE)\opencv\x64\vc16\lib;$(C_INCLUDE)\libtorch\lib;$(C_INCLUDE)\MNN\lib\x64\Release\Static\MD;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(C_INCLUDE)\json\include;$(C_INCLUDE)\libhv\include;$(C_INCLUDE)\opencv\include;$(C_INCLUDE)\MNN\include;C:\Program Files\NVIDIA Corporation\NvToolsExt\\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\include;C:\Program Files\NVIDIA Corporation\NvToolsExt\include;$(C_INCLUDE)\boost\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(C_INCLUDE)\json\lib\x64\release;$(C_INCLUDE)\opencv\x64\vc16\lib;$(C_INCLUDE)\libtorch\lib;$(C_INCLUDE)\MNN\lib\x64\Release\Static\MD;$(C_INCLUDE)\libhv\lib;$(C_INCLUDE)\boost\lib\x64;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)..\vsout\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
   </PropertyGroup>
@@ -135,20 +136,50 @@
       <LanguageStandard>stdcpp14</LanguageStandard>
       <RuntimeTypeInfo>
       </RuntimeTypeInfo>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;NOMINMAX;USE_DISTRIBUTED;USE_C10D_GLOO;INFERENCE_HELPER_ENABLE_MNN;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32_LEAN_AND_MEAN;_WINSOCK_DEPRECATED_NO_WARNINGS;WIN32;_WINDOWS;NDEBUG;NOMINMAX;USE_DISTRIBUTED;USE_C10D_GLOO;INFERENCE_HELPER_ENABLE_MNN;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opencv_world460.lib;opencv_img_hash460.lib;c10.lib;kineto.lib;C:\Program Files\NVIDIA Corporation\NvToolsExt\\lib\x64\nvToolsExt64_1.lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\lib\x64\cudart_static.lib;caffe2_nvrtc.lib;c10_cuda.lib;torch.lib;torch_cuda.lib;torch_cpu.lib;-INCLUDE:?warp_size@cuda@at@@YAHXZ;C:\Program Files\NVIDIA Corporation\NvToolsExt\lib\x64\nvToolsExt64_1.lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\lib\x64\cufft.lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\lib\x64\curand.lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\lib\x64\cublas.lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\lib\x64\cublasLt.lib;MNN.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>jsoncpp.lib;libboost_chrono-vc140-mt-1_60.lib;libboost_date_time-vc140-mt-1_60.lib;libboost_filesystem-vc140-mt-1_60.lib;libboost_locale-vc140-mt-1_60.lib;libboost_regex-vc140-mt-1_60.lib;libboost_system-vc140-mt-1_60.lib;libboost_thread-vc140-mt-1_60.lib;hv.lib;opencv_world460.lib;opencv_img_hash460.lib;c10.lib;kineto.lib;C:\Program Files\NVIDIA Corporation\NvToolsExt\\lib\x64\nvToolsExt64_1.lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\lib\x64\cudart_static.lib;caffe2_nvrtc.lib;c10_cuda.lib;torch.lib;torch_cuda.lib;torch_cpu.lib;-INCLUDE:?warp_size@cuda@at@@YAHXZ;C:\Program Files\NVIDIA Corporation\NvToolsExt\lib\x64\nvToolsExt64_1.lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\lib\x64\cufft.lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\lib\x64\curand.lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\lib\x64\cublas.lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\lib\x64\cublasLt.lib;MNN.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="casync_log.h" />
+    <ClInclude Include="ccfg.h" />
+    <ClInclude Include="ccmd_param.h" />
+    <ClInclude Include="cconfig.h" />
+    <ClInclude Include="cdigit2str.h" />
+    <ClInclude Include="cdron_video_analysls.h" />
     <ClInclude Include="cgpu_detector.h" />
+    <ClInclude Include="clib_util.h" />
     <ClInclude Include="clicense_plate.h" />
+    <ClInclude Include="clog.h" />
+    <ClInclude Include="clog_color.h" />
+    <ClInclude Include="clog_define.h" />
+    <ClInclude Include="cmem_pool.h" />
+    <ClInclude Include="cmqtt_mgr.h" />
+    <ClInclude Include="cmsg_buffer.h" />
+    <ClInclude Include="cnet_define.h" />
+    <ClInclude Include="cnet_mgr.h" />
+    <ClInclude Include="cnet_msg.h" />
+    <ClInclude Include="cnet_msg_header.h" />
+    <ClInclude Include="cnet_msg_queue.h" />
+    <ClInclude Include="cnet_msg_reserve.h" />
+    <ClInclude Include="cnet_session.h" />
+    <ClInclude Include="cnet_type.h" />
+    <ClInclude Include="cnoncopyable.h" />
+    <ClInclude Include="crandom.h" />
+    <ClInclude Include="csingleton.h" />
+    <ClInclude Include="ctime_api.h" />
+    <ClInclude Include="ctime_const.h" />
+    <ClInclude Include="ctime_elapse.h" />
+    <ClInclude Include="cvideo_analysis.h" />
+    <ClInclude Include="cvideo_analysis_mgr.h" />
     <ClInclude Include="cxxopts.h" />
+    <ClInclude Include="cyolov_dnn.h" />
     <ClInclude Include="detector.h" />
     <ClInclude Include="HyperLPR\basic_types.h" />
     <ClInclude Include="HyperLPR\buffer_module\all.h" />
@@ -187,8 +218,30 @@
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="casync_log.cpp" />
+    <ClCompile Include="ccfg.cpp" />
+    <ClCompile Include="ccmd_param.cpp" />
+    <ClCompile Include="cconfig.cpp" />
+    <ClCompile Include="cdigit2str.cpp" />
+    <ClCompile Include="cdron_video_analysls.cpp" />
     <ClCompile Include="cgpu_detector.cpp" />
     <ClCompile Include="clicense_plate.cpp" />
+    <ClCompile Include="clog.cpp" />
+    <ClCompile Include="clog_color.cpp" />
+    <ClCompile Include="cmem_pool.cpp" />
+    <ClCompile Include="cmqtt_mgr.cpp" />
+    <ClCompile Include="cmsg_buffer.cpp" />
+    <ClCompile Include="cnet_mgr.cpp" />
+    <ClCompile Include="cnet_msg.cpp" />
+    <ClCompile Include="cnet_msg_queue.cpp" />
+    <ClCompile Include="cnet_msg_reserve.cpp" />
+    <ClCompile Include="cnet_session.cpp" />
+    <ClCompile Include="cnet_type.cpp" />
+    <ClCompile Include="crandom.cpp" />
+    <ClCompile Include="ctime_api.cpp" />
+    <ClCompile Include="cvideo_analysis.cpp" />
+    <ClCompile Include="cvideo_analysis_mgr.cpp" />
+    <ClCompile Include="cyolov_dnn.cpp" />
     <ClCompile Include="detector.cpp" />
     <ClCompile Include="HyperLPR\buffer_module\camera_buffer.cpp" />
     <ClCompile Include="HyperLPR\context_module\hyper_lpr_context.cpp" />
@@ -206,8 +259,10 @@
     <ClCompile Include="HyperLPR\nn_module\mnn_adapter.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="test_gpu.cpp" />
+    <ClCompile Include="test_mqtt.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 11.8.targets" />
   </ImportGroup>
 </Project>
