[mtt 中信息格式修改]

--- a/bin/server.cfg
+++ b/bin/server.cfg
@@ -29,9 +29,12 @@ mqtt_host = 192.168.2.51
 mqtt_port = 1883
 mqtt_user = admin
 mqtt_passwd = Syz20120328
+mqtt_passwd = Syz20120328
 
-
-opencv_show = 0
+# OPENCV_FFMPEG_CAPTURE_OPTIONS: rtsp_flags
+# OPENCV_FFMPEG_DEBUG : 1
+# OPENCV_FFMPEG_LOGLEVEL : 86
+#opencv_show = 1
 
 
 
